--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/Blog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FASHIONS"
+                android:text="Biswas Blog"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:paddingTop="10dp"
